<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stroke_grey"
    android:padding="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout9"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvNewEventHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="Edit Profile"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_profile_save_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout99"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout9">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_profile_pic"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@android:drawable/dark_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout19" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/nav_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="Profile Photo"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_profile_pic">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout5"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/edit_profile_upload_button"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:backgroundTint="@color/white"
                        android:text="Upload Photo"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:cornerRadius="100px"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/black"
                        app:strokeWidth="1px" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/edit_profile_remove_button"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:backgroundTint="@color/white"
                        android:text="Remove Photo"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:cornerRadius="100px"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/black"
                        app:strokeWidth="1px" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout200">

                <ImageView
                    android:id="@+id/InfoView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/contact"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/information"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/InfoView"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ScrollView
                android:id="@+id/scrollView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/etNameHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/inter"
                        android:text="NAME"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/edit_profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLength="50" />

                    <TextView
                        android:id="@+id/etAboutHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/inter"
                        android:text="PHONE NUMBER"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/edit_profile_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="11" />

                    <TextView
                        android:id="@+id/etLocationHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/inter"
                        android:text="EMAIL ADDRESS"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/edit_profile_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLength="100" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="Geo-Tracking"
                            android:src="@drawable/nav_map" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter_semibold"
                            android:gravity="start"
                            android:text="Enable Geo-Tracking"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <CheckBox
                            android:id="@+id/geo_tracking_check"
                            android:layout_width="22dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:buttonTint="@color/black" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <Button
        android:id="@+id/edit_profile_save_changes"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/black"
        android:text="Save Changes"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="100px"
        app:layout_constraintBottom_toTopOf="@+id/attendee_bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/attendee_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentDescription="@string/bottom_nav_content_description"
        app:itemActiveIndicatorStyle="@style/Theme.BottomNavigationView.ActiveIndicator"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconTint="@color/black"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/attendee_bottom_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>
